# rpc-services

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-single-platform.yml  docker-image.yml  super-linter.yml
docs/: CODEOWNERS  env-changes.md  env-setup.md
src/: main.cc
src/database/: CMakeLists.txt  database.h  sql_formatter.cc  sql_formatter.h  sqlite3.h  sqlite3ext.h  sqlite_database.cc  sqlite_database.h
src/database/sqlite/: CPPLINT.cfg  sqlite3.h  sqlite3ext.h
src/genproto/: CMakeLists.txt  CPPLINT.cfg  admin.grpc.pb.cc  admin.grpc.pb.h  admin.pb.cc  admin.pb.h  discovery.grpc.pb.cc  discovery.grpc.pb.h  discovery.pb.cc  discovery.pb.h  helloworld.grpc.pb.cc  helloworld.grpc.pb.h  helloworld.pb.cc  helloworld.pb.h  matching.grpc.pb.cc  matching.grpc.pb.h  matching.pb.cc  matching.pb.h  messaging.grpc.pb.cc  messaging.grpc.pb.h  messaging.pb.cc  messaging.pb.h  profile.grpc.pb.cc  profile.grpc.pb.h  profile.pb.cc  profile.pb.h
src/proto/: helloworld.proto
src/services/: CMakeLists.txt  admin_service.cc  admin_service.h  helloworld_service.cc  helloworld_service.h  profile_service.cc  profile_service.h
src/test/: CMakeLists.txt
src/util/: CMakeLists.txt  error.h  global.h  log.h  move_semantics.h  result.h
test/: CMakeLists.txt  sql_formatter_test.cc  sqlite_database_test.cc
test/assets/: init.sql
